<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PlaneFittingActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@id/toolbar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ar_wrapper">

        <LinearLayout
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true">

            <ProgressBar
                android:id="@+id/progressBarWait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        <TextView
            android:id="@+id/emptyText"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="Wait for Localization... Move around with device." />
        </LinearLayout>


    </RelativeLayout>

        <LinearLayout
            android:id="@+id/edit_view"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@color/ms_material_blue_500"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="editControlPressed"
                android:text="@string/positon"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="positionControlPressed"
                    android:src="@drawable/ic_keyboard_arrow_up_black_24dp" />



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:onClick="positionControlPressed"
                        android:src="@drawable/ic_keyboard_arrow_left_black_24dp"/>

                    <ImageButton
                        android:id="@+id/btn_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="positionControlPressed"
                        android:src="@drawable/ic_keyboard_arrow_right_black_24dp"/>

                </LinearLayout>


                <ImageButton
                    android:id="@+id/btn_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="positionControlPressed"
                    android:src="@drawable/ic_keyboard_arrow_down_black_24dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/dimension"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <Button
                   android:id="@+id/btn_plus"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:onClick="sizeControlPressed"
                   android:text="+"/>

               <Button
                   android:id="@+id/btn_minus"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:onClick="sizeControlPressed"
                   android:text="-"/>

           </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orientation"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/axis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_rotate1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="rotationControlPressed"
                    android:text="+"/>

                <Button
                    android:id="@+id/btn_rotate2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="rotationControlPressed"
                    android:text="-"/>

            </LinearLayout>



        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/info_view"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/ms_material_blue_500"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Info-View:"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/current_uuid"
            android:text="No uuid available" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dbcount" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/databaseCount"
            android:text="N/A" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
